# heroespath-src

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-flags-clang.txt  build-flags-gnu-valgrind.txt  build-flags-gnu.txt  build-flags-msvc.txt  run-static-analysis.sh  static-analysis.sh
game/creature/: CMakeLists.txt  achievement-enum.cpp  achievement-enum.hpp  achievement.cpp  achievement.hpp  achievements.cpp  achievements.hpp  algorithms.cpp  algorithms.hpp  body-type.cpp  body-type.hpp  condition-algorithms.cpp  condition-algorithms.hpp  condition-enum.cpp  condition-enum.hpp  condition-warehouse.cpp  condition-warehouse.hpp  condition.cpp  condition.hpp  conditions.cpp  conditions.hpp  creature.cpp  creature.hpp  dragon-class-enum.cpp  dragon-class-enum.hpp  name-info.cpp  name-info.hpp  race-enum.cpp  race-enum.hpp  race-stats.cpp  race-stats.hpp  race.cpp  race.hpp  rank.cpp  rank.hpp  role-enum.cpp  role-enum.hpp  role-stats.cpp  role-stats.hpp  role.cpp  (+15 more)
game/stage/: CMakeLists.txt  camp-stage.cpp  camp-stage.hpp  character-stage-anim-num.cpp  character-stage-anim-num.hpp  character-stage.cpp  character-stage.hpp  combat-stage.cpp  combat-stage.hpp  credit.cpp  credit.hpp  credits-stage.cpp  credits-stage.hpp  inn-stage.cpp  inn-stage.hpp  intro-stage.cpp  intro-stage.hpp  inventory-stage.cpp  inventory-stage.hpp  load-game-menu-stage.cpp  load-game-menu-stage.hpp  loop-cmd-addstage-camp.cpp  loop-cmd-addstage-character-creation.cpp  loop-cmd-addstage-combat.cpp  loop-cmd-addstage-credits.cpp  loop-cmd-addstage-inn.cpp  loop-cmd-addstage-intro.cpp  loop-cmd-addstage-inventory.cpp  loop-cmd-addstage-loadgamemenu.cpp  loop-cmd-addstage-mainmenu.cpp  loop-cmd-addstage-party-creation.cpp  loop-cmd-addstage-settings.cpp  loop-cmd-addstage-test.cpp  loop-cmd-addstage.hpp  main-menu-stage.cpp  main-menu-stage.hpp  party-stage.cpp  party-stage.hpp  settings-stage.cpp  settings-stage.hpp  (+2 more)
heroespath/: CMakeLists.txt  assertlogandthrow.hpp  creature-wrapper.cpp  creature-wrapper.hpp  game-data-file.cpp  game-data-file.hpp  game.cpp  game.hpp  horiz-symbol.cpp  horiz-symbol.hpp  i-popup-callback.hpp  log-macros.hpp  logger.cpp  logger.hpp  loop-manager.cpp  loop-manager.hpp  loop-state-enum.cpp  loop-state-enum.hpp  main-menu-buttons.cpp  main-menu-buttons.hpp  main-menu-title.cpp  main-menu-title.hpp  ouroboros.cpp  ouroboros.hpp  popup-info.cpp  popup-info.hpp  popup-response.hpp  settings-file.cpp  settings-file.hpp  text-button-credits.cpp  text-button-credits.hpp  which-popup-enum.cpp  which-popup-enum.hpp
heroespath/combat/: CMakeLists.txt  combat-anim.cpp  combat-anim.hpp  combat-display.cpp  combat-display.hpp  combat-node.cpp  combat-node.hpp  combat-restore-info.cpp  combat-restore-info.hpp  combat-sound-effects.cpp  combat-sound-effects.hpp  combat-text.cpp  combat-text.hpp  combat-tree.cpp  combat-tree.hpp  encounter.cpp  encounter.hpp  fight-results.cpp  fight-results.hpp  fight.cpp  fight.hpp  node-type.cpp  node-type.hpp  party-factory.cpp  party-factory.hpp  strategy-chances.cpp  strategy-chances.hpp  strategy-details.cpp  strategy-details.hpp  strategy-enums.cpp  strategy-enums.hpp  strategy-info.cpp  strategy-info.hpp  summary-view.cpp  summary-view.hpp  turn-action-enum.cpp  turn-action-enum.hpp  turn-action-info.cpp  turn-action-info.hpp  turn-decider.cpp  (+3 more)
heroespath/creature/: CMakeLists.txt  achievement-enum.cpp  achievement-enum.hpp  achievement.cpp  achievement.hpp  achievements.cpp  achievements.hpp  algorithms.cpp  algorithms.hpp  body-type.cpp  body-type.hpp  condition-algorithms.cpp  condition-algorithms.hpp  condition-enum.cpp  condition-enum.hpp  condition.cpp  condition.hpp  conditions.cpp  conditions.hpp  creature.cpp  creature.hpp  dragon-class-enum.cpp  dragon-class-enum.hpp  name-info.cpp  name-info.hpp  race-enum.cpp  race-enum.hpp  race-stats.cpp  race-stats.hpp  race.cpp  race.hpp  rank.cpp  rank.hpp  role-enum.cpp  role-enum.hpp  role-stats.cpp  role-stats.hpp  role.cpp  role.hpp  sex-enum.cpp  (+9 more)
heroespath/item/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  armor-details.cpp  armor-details.hpp  armor-factory.cpp  armor-factory.hpp  armor-info.cpp  armor-info.hpp  armor-types.cpp  armor-types.hpp  enchantment.cpp  enchantment.hpp  i-enchantment.cpp  i-enchantment.hpp  inventory.cpp  inventory.hpp  item-factory-base.cpp  item-factory-base.hpp  item-type-enum.cpp  item-type-enum.hpp  item.cpp  item.hpp  misc-item-factory.cpp  misc-item-factory.hpp  types.hpp  weapon-details.cpp  weapon-details.hpp  weapon-factory.cpp  weapon-factory.hpp  weapon-info.cpp  weapon-info.hpp  weapon-types.cpp  weapon-types.hpp
heroespath/location/: CMakeLists.txt  i-location.hpp  location.cpp  location.hpp  map-enum.cpp  map-enum.hpp
heroespath/non-player/: CMakeLists.txt  chance-factory.cpp  chance-factory.hpp  character.cpp  character.hpp  inventory-factory.cpp  inventory-factory.hpp  ownership-chance-types.cpp  ownership-chance-types.hpp  ownership-profile.cpp  ownership-profile.hpp  party.cpp  party.hpp
heroespath/player/: CMakeLists.txt  character.cpp  character.hpp  initial.cpp  initial.hpp  party-serialize-includes.hpp  party.cpp  party.hpp
heroespath/spell/: CMakeLists.txt  spell-base.cpp  spell-base.hpp  spell-enum.cpp  spell-enum.hpp  spell-type-enum.cpp  spell-type-enum.hpp
heroespath/stage/: CMakeLists.txt  camp-stage.cpp  camp-stage.hpp  character-stage-anim-num.cpp  character-stage-anim-num.hpp  character-stage.cpp  character-stage.hpp  combat-stage.cpp  combat-stage.hpp  credit.cpp  credit.hpp  credits-stage.cpp  credits-stage.hpp  inn-stage.cpp  inn-stage.hpp  intro-stage.cpp  intro-stage.hpp  inventory-stage.cpp  inventory-stage.hpp  load-game-menu-stage.cpp  load-game-menu-stage.hpp  loop-cmd-addstage-camp.cpp  loop-cmd-addstage-character-creation.cpp  loop-cmd-addstage-combat.cpp  loop-cmd-addstage-credits.cpp  loop-cmd-addstage-inn.cpp  loop-cmd-addstage-intro.cpp  loop-cmd-addstage-test.cpp  (+14 more)
main/: CMakeLists.txt  main.cpp
src/: .clang-format  .clang-tidy  CMakeLists.txt  compile_commands.json  config.txt  game-data.txt
(+2302 files in other folders)
