cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
project("sfml-util-gui")

if(WIN32)
	add_definitions("-DWIN32_LEAN_AND_MEAN")
	set(SFML_INCLUDE_DIR ${SFML_PATH}/include)
	set(SFML_LIBRARY_DIRS ${SFML_PATH}/lib)
	set(SFML_LIBRARIES sfml-system.lib sfml-window.lib sfml-graphics.lib)
	set(Boost_COMPILER -vc90)
    include_directories(${include_directories} . ${SFML_INCLUDE_DIR})
else()
	add_definitions("-Wall -O3")
	set(SFML_INCLUDE_DIR "-I/usr/include/SFML")
	set(SFML_LIBRARY_DIRS "/usr/lib")
	set(SFML_LIBRARIES sfml-system sfml-window sfml-graphics)
endif()

file(GLOB source_files *.?pp)
add_library(${PROJECT_NAME} STATIC ${source_files})
target_link_libraries(${PROJECT_NAME} sfml-util ${Boost_LIBRARIES})
